# milac

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  log  output.map
_CPack_Packages/Linux/DEB/mila_accept-0.0.0-Linux/: control  md5sums
_CPack_Packages/Linux/STGZ/: mila_accept-0.0.0-Linux.sh
_CPack_Packages/Linux/TZ/: mila_accept-0.0.0-Linux.tar.Z
include/: email.h  log.h  mila.h  mila_tread.h  str_replace.h
pkg/: mila_accept-0.0.0-Linux.deb
src/: email.c  log.c  main.c  mila.c  mila_tread.c  str_replace.c
test/: email_ok.c  getfromemail_nok.c  getfromemail_ok.c  log_ok.c  mail_ok.c  mila_accept_ok.c  mila_find_emaillink_ok.c  mila_ok.c  return1.html  return2.html  return3.html  return_1.html  return_partial_ok.html  smtp_ok.c  test.h
test/match/: 1510639489202562  1510659898627478  1510676880564945  1510735845266477  1510735845271567  1510743418933235  1510743789719365  1510769027216140  1510769028009953
test/web_match/: 1.html  2.html
test/without_match/: 1510550821802089  1510567480675924  1510567513586275  1510576923796592  1510635687954659  1510654819664854  1510674656438508  1510674718844064  1510716350194860  1510716449415690  1510716471690746  1510722091068754  1510722143284345  1510743653680880  1510743758921111  1510759047191323  1510759945714131
